5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4369/executions/1650_2728.log
== TEST (2019-04-25 19:19:51) 
-- CODE:
p = float(input("Digite o percurso: "))
t = input("Digite A ou B: ")
A = 8/1 "Km/L"
B = 12/1 "Km/L"
if(t == "A"):
	consumo == p/A
	print(round(consumo, 2))
-- ERROR:
File "XXXX", line 3
    A = 8/1 "Km/L"
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 19:20:04) 
-- CODE:
p = float(input("Digite o percurso: "))
t = input("Digite A ou B: ")
A = 8/1 
B = 12/1 
if(t == "A"):
	consumo == p/A
	print(round(consumo, 2))
-- ERROR:
File "XXXX", line 3
    A = 8/1 "Km/L"
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 19:20:37) 
-- CODE:
p = float(input("Digite o percurso: "))
t = input("Digite A ou B: ")
A = 8/1 
B = 12/1 
if(t == "A"):
	consumo == p/A
	print(round(consumo, 2))
else:
	consumo == p/B
	print(round(consumo, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    consumo == p/B
NameError: name 'consumo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 19:22:08) 
-- CODE:
p = float(input("Digite o percurso: "))
t = input("Digite A ou B: ")
A = 8/1 
B = 12/1 
consumo = p/A
if(t == "A"):
	consumo == p/A
	print(round(consumo, 2))
else:
	consumo == p/B
	print(round(consumo, 2))
-- OUTPUT:
8.12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 19:22:17) 
-- CODE:
p = float(input("Digite o percurso: "))
t = input("Digite A ou B: ")
A = 8/1 
B = 12/1 
consumo = p/A
if(t == "A"):
	consumo == p/A
	print(round(consumo, 2))
else:
	consumo == p/B
	print(round(consumo, 2))
-- OUTPUT:
8.12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 19:22:20) 
-- CODE:
p = float(input("Digite o percurso: "))
t = input("Digite A ou B: ")
A = 8/1 
B = 12/1 
consumo = p/A
if(t == "A"):
	consumo == p/A
	print(round(consumo, 2))
else:
	consumo == p/B
	print(round(consumo, 2))
-- EXECUTION TIME:
0.167985
-- TEST CASE 1:
---- input:
65
B

---- correct output:
5.42
---- user output:
8.12
-- TEST CASE 2:
---- input:
65
A
---- correct output:
8.12
---- user output:
8.12
-- TEST CASE 3:
---- input:
200
A
---- correct output:
25.0
---- user output:
25.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 19:22:23) 
-- CODE:
p = float(input("Digite o percurso: "))
t = input("Digite A ou B: ")
A = 8/1 
B = 12/1 
consumo = p/A
if(t == "A"):
	consumo == p/A
	print(round(consumo, 2))
else:
	consumo == p/B
	print(round(consumo, 2))
-- EXECUTION TIME:
0.13145
-- TEST CASE 1:
---- input:
65
B

---- correct output:
5.42
---- user output:
8.12
-- TEST CASE 2:
---- input:
65
A
---- correct output:
8.12
---- user output:
8.12
-- TEST CASE 3:
---- input:
200
A
---- correct output:
25.0
---- user output:
25.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 19:22:28) 
-- CODE:
p = float(input("Digite o percurso: "))
t = input("Digite A ou B: ")
A = 8/1 
B = 12/1 
consumo = p/A
if(t == "A"):
	consumo == p/A
	print(round(consumo, 2))
else:
	consumo == p/B
	print(round(consumo, 2))
-- OUTPUT:
8.12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 22:42:57) 
-- CODE:
p = float(input("Digite o percurso em 'km': "))
t = str(input("Digite A ou B: "))
A = 8
B = 12
if(t == "A")
	o == p / A
	print(round(o, 2))
else:
	o == p / B
	print(round(o, 2))
	

-- ERROR:
File "XXXX", line 5
    if(t == "A")
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 22:43:07) 
-- CODE:
p = float(input("Digite o percurso em 'km': "))
t = str(input("Digite A ou B: "))
A = 8
B = 12
if(t == "A"):
	o == p / A
	print(round(o, 2))
else:
	o == p / B
	print(round(o, 2))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    o == p / B
NameError: name 'o' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 22:45:10) 
-- CODE:
p = float(input("Digite o percurso em 'km': "))
t = str(input("Digite A ou B: "))
L = 1
A = 8 / L
B = 12 / L
c = p / L
if(t == "A"):
	c == p / A
	print(round(c, 2))
else:
	c == p / B
	print(round(c, 2))
	

-- OUTPUT:
65.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 22:45:44) 
-- CODE:
p = float(input("Digite o percurso em 'km': "))
t = str(input("Digite A ou B: "))
L = 1
A = 8 / L
B = 12 / L
c = p / L
if(t == "A"):
	c == p / A
	print(round(c, 2))
else:
	c == p / B
	print(round(c, 2))
	

-- OUTPUT:
65.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 22:47:26) 
-- CODE:
p = float(input("Digite o percurso em 'km': "))
t = str(input("Digite A ou B: "))
L = 1
A = 8 / L
B = 12 / L
c1 = p / A
c2 = p / B
if(t == "A"):
	print(round(c1, 2))
else:
	c == p / B
	print(round(c2, 2))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    c == p / B
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 22:47:36) 
-- CODE:
p = float(input("Digite o percurso em 'km': "))
t = str(input("Digite A ou B: "))
L = 1
A = 8 / L
B = 12 / L
c1 = p / A
c2 = p / B
if(t == "A"):
	print(round(c1, 2))
else:
	c == p / B
	print(round(c2, 2))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    c == p / B
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 22:47:54) 
-- CODE:
p = float(input("Digite o percurso em 'km': "))
t = str(input("Digite A ou B: "))
L = 1
A = 8 / L
B = 12 / L
c1 = p / A
c2 = p / B
if(t == "A"):
	print(round(c1, 2))
else:
	print(round(c2, 2))
	

-- OUTPUT:
5.42
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 22:48:02) 
-- CODE:
p = float(input("Digite o percurso em 'km': "))
t = str(input("Digite A ou B: "))
L = 1
A = 8 / L
B = 12 / L
c1 = p / A
c2 = p / B
if(t == "A"):
	print(round(c1, 2))
else:
	print(round(c2, 2))
	

-- EXECUTION TIME:
0.115821
-- TEST CASE 1:
---- input:
65
B

---- correct output:
5.42
---- user output:
5.42
-- TEST CASE 2:
---- input:
65
A
---- correct output:
8.12
---- user output:
8.12
-- TEST CASE 3:
---- input:
200
A
---- correct output:
25.0
---- user output:
25.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
